--- a/lifebooks-backend/requirements.txt
+++ b/lifebooks-backend/requirements.txt
@@ -3,4 +3,9 @@ Flask-CORS==4.0.0
 PyJWT==2.8.0
 openai==0.28.1
 Werkzeug==2.3.7
+reportlab==4.0.4
+fpdf2==2.7.6
+Pillow==10.0.1
+requests==2.31.0
+stripe==7.8.0
 
