--- a/lifebooks-backend/requirements.txt
+++ b/lifebooks-backend/requirements.txt
@@ -8,4 +8,10 @@ fpdf2==2.7.6
 Pillow==10.0.1
 requests==2.31.0
 stripe==7.8.0
+psycopg2-binary==2.9.7
+SQLAlchemy==2.0.23
+Flask-SQLAlchemy==3.1.1
+Flask-Migrate==4.0.5
+python-dotenv==1.0.0
+bcrypt==4.1.2
 
