Create serverless API structure for Vercel with individual endpoint files

--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
   "version": 2,
   "builds": [
     {
-      "src": "lifebooks-backend/src/main.py",
+      "src": "api/*.py",
       "use": "@vercel/python"
     },
     {
@@ -12,10 +12,6 @@
     }
   ],
   "routes": [
-    {
-      "src": "/api/(.*)",
-      "dest": "lifebooks-backend/src/main.py"
-    },
     {
       "src": "/(.*)",
       "dest": "lifebooks-frontend/build/$1"
