--- a/lifebooks-frontend/package.json
+++ b/lifebooks-frontend/package.json
@@ -1,6 +1,6 @@
 {
   "name": "lifebooks-frontend",
-  "version": "1.0.0",
+  "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
@@ -8,9 +8,10 @@
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
-    "axios": "^1.4.0",
+    "react-router-dom": "^6.8.1",
+    "react-markdown": "^8.0.7",
+    "axios": "^1.3.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -38,4 +39,3 @@
     ]
   }
 }
-
